--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Sistema de Quejas y Reclamos</title>
+    <title>Sistema de Sugerencias y Reclamos</title>
     <meta name="description" content="Plataforma para registrar y gestionar quejas de locales comerciales" />
     <meta name="author" content="Lovable" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 
-    <meta property="og:title" content="Sistema de Quejas y Reclamos" />
+    <meta property="og:title" content="Sistema de Sugerencias y Reclamos" />
     <meta property="og:description" content="Plataforma para registrar y gestionar quejas de locales comerciales" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
